--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
       <!--Opening Page-->
       <section id="hero">
         <div class="Upper_container">
-          <img
-            src="images/Gemini_Generated_Image_hesehfhesehfhese.png"
-            alt="Hero image"
-          />
+          <img src="images/Developer.png" alt="Hero image" />
         </div>
         <div class="Lower_container">
           <h1 class="hero_title">MEET THE DEVELOPER</h1>
@@ -762,7 +759,7 @@
         </div>
         <div class="project-container">
           <div class="programming-language-project">
-            <div class="p_box1">
+            <div class="p_box">
               <div class="ImgCard">
                 <a
                   href="https://www.geeksforgeeks.org/top-software-development-project-ideas/"
@@ -770,7 +767,7 @@
                   <img src="Project_Pictures/Programming_Logo.jpg" alt="" />
                 </a>
               </div>
-              <div class="title_programming">
+              <div class="title">
                 <h3>Programming Languages Projects</h3>
                 <p>
                   Create, design, and test programming languages for efficient
@@ -778,15 +775,15 @@
                 </p>
               </div>
             </div>
-            <div class="p_box2">
-              <div class="ImgCard1">
+            <div class="p_box">
+              <div class="ImgCard">
                 <a
                   href="https://www.geeksforgeeks.org/web-development-projects/"
                 >
                   <img src="Project_Pictures/WebDev_Logo.jpg" alt="" />
                 </a>
               </div>
-              <div class="title_web">
+              <div class="title">
                 <h3>Web Development Projects</h3>
                 <p>
                   Build and design responsive websites using modern technologies
@@ -794,19 +791,35 @@
                 </p>
               </div>
             </div>
-            <div class="p_box3">
-              <div class="ImgCard2">
+            <div class="p_box">
+              <div class="ImgCard">
                 <a
                   href="https://nevonprojects.com/project-ideas/android-project-ideas/"
                 >
                   <img src="Project_Pictures/AppDev_Logo.jpg" alt="" />
                 </a>
               </div>
-              <div class="title_app">
+              <div class="title">
                 <h3>App Development Projects</h3>
                 <p>
                   Develop innovative mobile applications for iOS and Android
                   platforms efficiently.
+                </p>
+              </div>
+            </div>
+            <div class="p_box">
+              <div class="ImgCard">
+                <a
+                  href="https://www.geeksforgeeks.org/machine-learning/machine-learning-projects/"
+                >
+                  <img src="Project_Pictures/Ml.avif" alt="" />
+                </a>
+              </div>
+              <div class="title">
+                <h3>100+ Machine Learning Projects with Source Code [2025]</h3>
+                <p>
+                  Develop innovative machine learning models and solutions
+                  efficiently for real-world applications.
                 </p>
               </div>
             </div>
@@ -841,10 +854,9 @@
         </div>
       </section>
     </main>
-
+    <!-- footer -->
     <footer>
       <div class="footer-container">
-        <!-- Section 1: About & Socials -->
         <div class="footer-section about">
           <h3 class="footer-logo">Code Hub</h3>
           <p>
