--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                   href="RoadMaps/DSA/roadmap of famous algorithms of computer sc....pdf"
                   download=""
                 >
-                  Famous Algorithms of Computer Science
+                  Famous Algorithms
                 </a>
               </div>
             </div>
