--- a/index.html
+++ b/index.html
@@ -392,57 +392,57 @@
             <div class="box-container_3">
               <div class="box5">
                 <a
-                  href="Roadmaps/WebDev/Full Stack Web Development Roadmap.pdf"
+                  href="RoadMaps/WebDev/Full Stack Web Development Roadmap.pdf"
                   download=""
                   >Full Stack Development</a
                 >
               </div>
               <div class="box5">
-                <a href="Roadmaps/WebDev/mobile-roadmap.pdf" download=""
+                <a href="RoadMaps/WebDev/mobile-roadmap.pdf" download=""
                   >APP Development</a
                 >
               </div>
               <div class="box5">
                 <a
-                  href="Roadmaps/WebDev/Java full stack development roadmap.pdf"
+                  href="RoadMaps/WebDev/Java full stack development roadmap.pdf"
                   download=""
                   >Java Full Stack Development</a
                 >
               </div>
               <div class="box5">
-                <a href="Roadmaps/WebDev/MERN-stack Roadmap.pdf" download=""
+                <a href="RoadMaps/WebDev/MERN-stack Roadmap.pdf" download=""
                   >Mern Stack Developer</a
                 >
               </div>
               <div class="box5">
-                <a href="Roadmaps/WebDev/ReactJS_30_Days_Roadmap.pdf" data-=""
+                <a href="RoadMaps/WebDev/ReactJS_30_Days_Roadmap.pdf" data-=""
                   >ReactJS in 30 Days</a
                 >
               </div>
               <div class="box5">
-                <a href="Roadmaps/WebDev/React Native Roadmap.pdf" download=""
+                <a href="RoadMaps/WebDev/React Native Roadmap.pdf" download=""
                   >React Native</a
                 >
               </div>
               <div class="box5">
                 <a
-                  href="Roadmaps/WebDev/Machine Learning Roadmap.pdf"
+                  href="RoadMaps/WebDev/Machine Learning Roadmap.pdf"
                   download=""
                   >Machine-learning</a
                 >
               </div>
               <div class="box5">
-                <a href="Roadmaps/WebDev/Data Analyst Roadmap.pdf" download=""
+                <a href="RoadMaps/WebDev/Data Analyst Roadmap.pdf" download=""
                   >Data Analyst</a
                 >
               </div>
               <div class="box5">
-                <a href="Roadmaps/WebDev/Devops Roadmap.pdf" download=""
+                <a href="RoadMaps/WebDev/Devops Roadmap.pdf" download=""
                   >Devops Engineer</a
                 >
               </div>
               <div class="box5">
-                <a href="Roadmaps/WebDev/Cyber security Roadmap.pdf" download=""
+                <a href="RoadMaps/WebDev/Cyber security Roadmap.pdf" download=""
                   >Cyber Security</a
                 >
               </div>
